fixed bugs after the test

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Учёт моих расходов</h1>
         <div class="main-field">
             <div class="where-spend">Куда было потрачено:<input placeholder="Куда было потрачено" id="where-input"/></div>
-            <div class="much-spend">Сколько было потрачено:<input placeholder="Сколько было потрачено" id="much-input"/></div>
+            <div class="much-spend">Сколько было потрачено:<input type="number" placeholder="Сколько было потрачено" id="much-input"/></div>
             <button class="add-btn">Добавить</button>
         </div>
     </div>
